tests/positive/basic/import_transitive/input.ci
import "a.ci";
void main(string[] args) {
    print(toString(getValue()) + "\n");
}
