tests/negative/runtime/writelines_missing_dir/input.ci
void main() {
    writeLines("missing/out.txt", ["a"]);
}
